# move_base_stub

./: CMakeLists.txt  README.md  package.xml
scripts/: move_base_stub.py
