<?xml version="1.0"?>
<package format="2">
  <name>move_base_stub</name>
  <version>1.0.0</version>
  <description>The move_base_stub package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
</package>
